# promptcase

./: .gitignore  AGENTS.md  CHANGELOG.md  PUBLISHING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/plans/: 2026-03-10-native-redesign.md  2026-03-10-sidecar-to-tauri-migration.md  2026-03-13-debounced-commits.md  2026-03-16-settings-polish-themes-design.md  2026-03-16-settings-polish-themes.md  2026-04-04-export-import.md  2026-04-04-folders-and-ux.md  2026-04-04-prompt-testing.md  2026-04-04-saved-search-filters.md  2026-04-04-tag-management.md  2026-04-04-version-comparison.md
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/scripts/: build-all-platforms.mjs  install-sidecar.mjs
sidecar/src/: config.ts  file-ops.ts  frontmatter.ts  git-ops.ts  index.ts  linter.ts  rpc.ts  search.ts  template.ts  tokenizer.ts  types.ts  watcher.ts  yaml-minimal.ts
sidecar/tests/: config.test.ts  file-ops.test.ts  frontmatter.test.ts  git-ops.test.ts  linter.test.ts  rpc.test.ts  search.test.ts  template.test.ts  tokenizer.test.ts
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: commands.rs  config.rs  error.rs  file_ops.rs  frontmatter.rs  git_ops.rs  linter.rs  llm.rs  main.rs  search.rs  state.rs  template.rs  tokenizer.rs  types.rs
src/lib/: ipc.ts  types.ts
src/lib/codemirror/: autocomplete.ts  template-highlighting.ts  template-styles.ts  theme.ts
src/lib/components/: CommandPalette.svelte  CompareView.svelte  ConfirmDialog.svelte  DiffView.svelte  Editor.svelte  EditorTabs.svelte  FileContextMenu.svelte  FolderContextMenu.svelte  FolderTree.svelte  HistoryPanel.svelte  InputDialog.svelte  Inspector.svelte  MetadataPanel.svelte  MoveToFolderDialog.svelte  ProblemsPanel.svelte  QuickOpen.svelte  ResolvedPreview.svelte  SettingsModal.svelte  (+9 more)
tests/: ipc.test.ts  tauri-config.test.ts
tests/integration/: editor-store.test.ts  ipc.test.ts
tests/stores/: editor.test.ts  files.test.ts
(+13 files in other folders)
