[package]
name = "promptcase"
version = "1.0.0"
description = "Promptcase desktop app shell"
authors = ["Promptcase Contributors"]
license = "GPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
