[package]
name = "promptcase"
version = "1.0.0"
description = "Promptcase desktop app shell"
authors = ["Promptcase Contributors"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = "0.19"
tiktoken-rs = "0.6"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
dirs = "6"

[dev-dependencies]
tempfile = "3"
