[package]
name = "promptcase"
version = "1.0.0"
description = "Promptcase desktop app shell"
authors = ["Promptcase Contributors"]
license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.80"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
git2 = "0.19"
tiktoken-rs = "0.6"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "2"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "stream"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio-stream = "0.1"
futures-util = "0.3"
tokio = { version = "1", features = ["sync"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
